--- a/src/pug/htdocs/career-counselors.pug
+++ b/src/pug/htdocs/career-counselors.pug
@@ -13,12 +13,26 @@ block page
   .counselors.feature__layer
     .feature__container
       h1.feature__heading Career Counselors
-      h2.feature__subheading Let's start simple
+      h2.feature__subheading Help your students—of any age—discover different careers within a museum
       
   .page__layer
     .page__container
       .page__content
-        p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu.
+        p What if you could help your students--of any age—discover different career opportunities within distinct kinds of museums? You can do that now. Find out more about different museum careers. Check out the following video!
         
-        include ../includes/global/media
+        .responsive-video-embed
+          iframe( src="https://www.youtube.com/embed/J8GUYg6pwZs" frameborder="0" allowfullscreen)
+            
+        p Explore salaries for various positions through a downloaded PDF on the Resources page. 
+
+        
+        h2.page__heading The Toy Exhibit, a book “by kids for kids”
+
+        p This book was created in partnership with students from the Maplewood Richmond Heights School District and the American Alliance of Museums. Elementary-aged students utilizes the curriculum of “School as Museum”, in which students are exposed to museum practices throughout the school year. Students assume various museum roles to create a quality, engaging exhibit each year. The book focuses on exhibit research, development, design and installation. 
+
+        .responsive-video-embed
+          iframe( src="https://www.yumpu.com/xx/embed/view/otRKJGbXn9vDiEUQ" frameborder="0" allowfullscreen="true" allowtransparency="true")
+
+        p In addition to museum exhibits, learn about distinct kinds of museums and their employment opportunities on the <a href="/resources">Resources</a> page.
+        
           
