--- a/src/pug/htdocs/index.pug
+++ b/src/pug/htdocs/index.pug
@@ -24,7 +24,7 @@ block page
         h1#jobhook.jobs__heading.animated Museums are hiring!
         h2.jobs__subheading Over <span class="bold">400,000</span> Americans are employed by museums, check out all these sweet jobs: 
         .jobs__content
-          p Director, Curator, Registrar, Docent, Museum Educator, Exhibit Designer, Museum Protection Staff, Preparator, Public Relations, Show Worker, Building and Grounds Staff, Chef, Librarian, Accountant, Grant Coordinator, Housekeeper, AV Tech, HR, Membership Officer, Installer, Electrician, Carpenter, Financial Officer, Payroll officer, Public Historian and more!
+          p Director, Curator, Registrar, Docent, Museum Educator, Exhibit Designer, Museum Protection Staff, Preparator, Public Relations, Show Worker, Building and Grounds Staff, Chef, Librarian, Accountant, Grant Coordinator, Housekeeper, AV Tech, HR, Membership Officer, Installer, Electrician, Carpenter, Financial Officer, Payroll Officer, Public Historian and more!
           //- .jobs__box
           //-   a.jobs__button(href="/youth.html") Watch video
           //-   a.jobs__button(href="/resources.html") See resources
