--- a/src/pug/htdocs/youth.pug
+++ b/src/pug/htdocs/youth.pug
@@ -12,13 +12,26 @@ block page
   
   .youth.feature__layer
     .feature__container
-      h1.feature__heading It's never to early
-      h2.feature__subheading to learn about museums
+      h1.feature__heading Youth
+      h2.feature__subheading When you grow up, have you thought about working in a museum?
       
   .page__layer
     .page__container
       .page__content
         
-        p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu.
+        p If not, check out the following video! 
         
-        include ../includes/global/media
+        .responsive-video-embed
+          iframe( src="https://www.youtube.com/embed/J8GUYg6pwZs" frameborder="0" allowfullscreen)
+            
+        p The video was written, directed, and voiceover performed by 5th and 6th grade students of the Maplewood Richmond Heights Elementary School in St. Louis, Missouri. Students showcased different careers available in museums. 
+
+        
+        h2.page__heading The Toy Exhibit, a book “by kids for kids”
+
+        p This book was created in partnership with students from the Maplewood Richmond Heights School District and the American Alliance of Museums. Elementary-aged students utilizes the curriculum of “School as Museum”, in which students are exposed to museum practices throughout the school year. Students assume various museum roles to create a quality, engaging exhibit each year. The book focuses on exhibit research, development, design and installation. 
+
+        .responsive-video-embed
+          iframe( src="https://www.yumpu.com/xx/embed/view/otRKJGbXn9vDiEUQ" frameborder="0" allowfullscreen="true" allowtransparency="true")
+            
+        p If you want more information about exciting museum careers, review the <a href="/resources">Resources</a> page of this website.
