--- a/src/pug/includes/global/nav.pug
+++ b/src/pug/includes/global/nav.pug
@@ -1,8 +1,8 @@
 .nav__layer
   .nav__container
-    h1
+    h1.nav__heading
       a(href="/" class="nav__logo") <span>museum jobs</span> gateway
-    div
+    .nav__links
       a(href="youth.html") Youth
       a(href="parents.html") Parents
       a(href="teachers.html") Teachers
