update stats on counselors page

--- a/src/pug/htdocs/career-counselors.pug
+++ b/src/pug/htdocs/career-counselors.pug
@@ -36,3 +36,13 @@ block page
         p In addition to museum exhibits, learn about distinct kinds of museums and their employment opportunities on the <a href="/resources">Resources</a> page.
         
           
+        h2.page_heading Alliance of Midwest Museums Salary Information (Medians)
+        ul
+          li Presidents and CEO's make $88,000 on average.
+          li Vice Presidents and Assistant Directors make $97,414 on average.
+          li Archivists make $44,800 on average. 
+          li Registrars make $47,165 on average.
+          li Head Librarians make$55,839 on average.
+          li Exhibit Designers make $59,775 on average. 
+          li Chief Curators make $54,649 on average.
+          li Senior Curators make $59,902 on average.
