--- a/src/pug/htdocs/index.pug
+++ b/src/pug/htdocs/index.pug
@@ -22,7 +22,8 @@ block page
     .jobs__container
       .jobs__card
         h1#jobhook.jobs__heading.animated Museums are hiring!
-        h2.jobs__subheading Over <span class="bold">400,000</span> Americans are employed by museums, check out all these sweet jobs: 
+        h2.jobs__subheading Over <span class="bold">400,000</span> Americans are employed by museums. Check out some of the sweet jobs museums have to offer:
+        
         .jobs__content
           p Director, Curator, Registrar, Docent, Museum Educator, Exhibit Designer, Museum Protection Staff, Preparator, Public Relations, Show Worker, Building and Grounds Staff, Chef, Librarian, Accountant, Grant Coordinator, Housekeeper, AV Tech, HR, Membership Officer, Installer, Electrician, Carpenter, Financial Officer, Payroll Officer, Public Historian and more!
           //- .jobs__box
@@ -45,7 +46,7 @@ block page
         .frame-border
           .frame-inset
             h3#stat2.stats__number 40
-        h2#stat2Heading.stats__subheading Museum and Non-profit arts and culture institutions in the St. Louis total more than <span class='dataSource'>GuideStar</span>
+        h2#stat2Heading.stats__subheading Museum and Non-profit arts and culture institutions in the St. Louis area total more than <span class='dataSource'>GuideStar</span>
         
     .stats__container
       #stat3Box.stats__box
@@ -59,7 +60,7 @@ block page
         .frame-border
           .frame-inset
             h3#stat4.stats__number TRUST
-        h2#stat4Heading.stats__subheading Museums are considered the most trustworthy source of information in America, rated higher than local papers, nonprofits researchers, the U.S. government, or academic researchers (22) <span class='dataSource'>Lake, Snell, Perry public opinion survey commissioned by the American Alliance of Museums (2001)</span>
+        h2#stat4Heading.stats__subheading Museums are considered the most trustworthy source of information in America, rated higher than local papers, nonprofit researchers, the U.S. government, or academic researchers (22) <span class='dataSource'>Lake, Snell, Perry public opinion survey commissioned by the American Alliance of Museums (2001)</span>
       
   .gallery__layer
     .gallery__container
