--- a/src/pug/htdocs/parents.pug
+++ b/src/pug/htdocs/parents.pug
@@ -13,7 +13,7 @@ block page
   .parents.feature__layer
     .feature__container
       h1.feature__heading Parents
-      h2.feature__subheading Help your child to prepare now for an exciting career in a mseum
+      h2.feature__subheading Help your child to prepare now for an exciting career in a museum
 
   .page__layer
     .page__container
