working on mobile

--- a/src/css/global/container.styl
+++ b/src/css/global/container.styl
@@ -7,7 +7,7 @@
   max-width 1200px
 
   +tablet()
-    background-color yellow
+    //background-color yellow
 
   +below(550px)
-    background-color orange
+    //background-color orange
