--- a/src/css/global/typography.styl
+++ b/src/css/global/typography.styl
@@ -57,12 +57,20 @@ body
   text-shadow -1px 1px 0 charcoal
   text-transform uppercase
 
+  +below(660px)
+    font-size 3rem
+
 [class*='__subheading']
   color white
   font-size 2rem
   font-weight: Condensed.weight.normal
   text-align center
   text-shadow -1px 1px 0 charcoal
+
+  +below(660px)
+    font-size 1.5rem
+    line-height 1
+    padding 0 2rem
 
 [class*='__title']
   color white
