--- a/src/pug/htdocs/career-counselors.pug
+++ b/src/pug/htdocs/career-counselors.pug
@@ -34,9 +34,9 @@ block page
           iframe( src="https://www.yumpu.com/xx/embed/view/otRKJGbXn9vDiEUQ" frameborder="0" allowfullscreen="true" allowtransparency="true")
 
         p In addition to museum exhibits, learn about distinct kinds of museums and their employment opportunities on the <a href="/resources">Resources</a> page.
-        
           
-        h2.page_heading Alliance of Midwest Museums Salary Information (Medians)
+        h2.page_heading SALARIES OF MUSEUM CAREERS IN THE MIDWEST
+        p When considering salaries for several museum careers, these figures only reflect averages for people working in the midwest region. For national salary ranges, check out the American Alliance of Museums (AAM) website. 
         ul
           li Presidents and CEO's make $88,000 on average.
           li Vice Presidents and Assistant Directors make $97,414 on average.
