--- a/src/pug/layout/global.pug
+++ b/src/pug/layout/global.pug
@@ -9,8 +9,8 @@ html.no-js
     block seo
     
     link(rel='stylesheet', href='/style.css')
-    //-script(src='javascripts/vendor/modernizr-2.7.1.min.js')
     link(href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:100,400,900|Fira+Sans:100,400,400i,900" rel="stylesheet")  
+    script(src='/modernizr.js')
     
   body
     .container
