--- a/src/css/modules/homepage/gallery.styl
+++ b/src/css/modules/homepage/gallery.styl
@@ -18,10 +18,17 @@
     padding 5rem 0
     width 60vw
 
+    +below(660px)
+      width 100%
+
   &__gallery
     display flex
     flex-flow row wrap
     width 100%
+
+    +below(660px)
+      flex-direction column
+      flex-flow none
 
   &__item
     background-size cover
@@ -35,6 +42,9 @@
     width calc(50% - 2rem)
     margin 1rem
     box-shadow 0 10px 6px -6px charcoal
+
+    +below(660px)
+      width calc(100vw - 4rem)
 
     &:nth-of-type(1)
       background-image url(img/museum-bw.jpg), linear-gradient(135deg, #0fc, indigo)
@@ -54,6 +64,9 @@
   &__heading
     // color indigo
     font-size 4rem
+
+    +below(660px)
+      font-size 2.5rem
 
   &__subheading
     color white
