--- a/src/css/modules/homepage/jobs.styl
+++ b/src/css/modules/homepage/jobs.styl
@@ -18,11 +18,17 @@
     padding 5rem 0
     width 60vw
 
+    +below(660px)
+      width 80vw
+
   &__card
     background-color white
     box-shadow 0 10px 6px -6px charcoal
     margin 3rem 0
     padding 3rem
+
+    +below(660px)
+      padding 1rem
 
   &__heading
     color indigo
@@ -31,12 +37,19 @@
     // animation-duration 10s
     //animation-delay .5s
     // animation-iteration-count infinite
+    +below(660px)
+      font-size 2rem
 
   &__subheading
     color charcoal
     padding 2rem
     line-height 1
     text-shadow none
+
+    +below(660px)
+      font-size 1rem
+      line-height 1.5
+      padding 1rem
 
   &__content
     color charcoal
