--- a/src/css/modules/pages/pages.styl
+++ b/src/css/modules/pages/pages.styl
@@ -12,6 +12,9 @@
     // animation-delay 2s
     // animation-iteration-count infinite
 
+    +below(660px)
+      font-size 2rem
+
   &__subheading
     color charcoal
     padding 2rem
@@ -24,3 +27,12 @@
 
     & > *
       margin-bottom 1.5rem
+
+    & > p, ul, h1, h2, h3
+      padding 0 5rem
+
+      +below(660px)
+        padding 0 2rem
+
+    & > h1, h2, h3
+      padding-top 2rem
