--- a/src/pug/htdocs/resources.pug
+++ b/src/pug/htdocs/resources.pug
@@ -13,7 +13,7 @@ block page
   .resource.feature__layer
     .feature__container
       h1.feature__heading Resources
-      h2.feature__subheading Get involved. Get a job!
+      h2.feature__subheading Get involved. Learn more about museum careers!
   
   .resource__layer
     .resource__container
