latest conent updates

--- a/src/pug/htdocs/teachers.pug
+++ b/src/pug/htdocs/teachers.pug
@@ -22,9 +22,6 @@ block page
         
         .responsive-video-embed
           iframe( src="https://www.youtube.com/embed/J8GUYg6pwZs" frameborder="0" allowfullscreen)
-            
-        p Explore salaries for various positions through a downloaded PDF on the Resources page. 
-
         
         h2.page__heading The Toy Exhibit, a book “by kids for kids”
 
@@ -33,5 +30,6 @@ block page
         .responsive-video-embed
           iframe( src="https://www.yumpu.com/xx/embed/view/otRKJGbXn9vDiEUQ" frameborder="0" allowfullscreen="true" allowtransparency="true")
 
-        p In addition to museum exhibits, learn about distinct kinds of museums and their employment opportunities on the <a href="/resources">Resources</a> page.
+        p
+          a.page___button(href="http://www.blurb.com/b/7871161-the-toy-exhibit") Free eBook offer: 
         
