--- a/src/pug/htdocs/youth.pug
+++ b/src/pug/htdocs/youth.pug
@@ -34,4 +34,5 @@ block page
         .responsive-video-embed
           iframe( src="https://www.yumpu.com/xx/embed/view/otRKJGbXn9vDiEUQ" frameborder="0" allowfullscreen="true" allowtransparency="true")
             
-        p If you want more information about exciting museum careers, review the <a href="/resources">Resources</a> page of this website.
+        p
+          a.page___button(href="http://www.blurb.com/b/7871161-the-toy-exhibit") Free eBook offer
