--- a/src/pug/htdocs/career-counselors.pug
+++ b/src/pug/htdocs/career-counselors.pug
@@ -23,7 +23,7 @@ block page
         .responsive-video-embed
           iframe( src="https://www.youtube.com/embed/J8GUYg6pwZs" frameborder="0" allowfullscreen)
             
-        p Explore salaries for various positions through a downloaded PDF on the Resources page. 
+        p On the <a href="/resources">Resources</a> page of the website, learn about employment opportunities at distinct kinds of museums. 
 
         
         h2.page__heading The Toy Exhibit, a book “by kids for kids”
@@ -32,17 +32,39 @@ block page
 
         .responsive-video-embed
           iframe( src="https://www.yumpu.com/xx/embed/view/otRKJGbXn9vDiEUQ" frameborder="0" allowfullscreen="true" allowtransparency="true")
+            
+        p
+          a.page___button(href="http://www.blurb.com/b/7871161-the-toy-exhibit") Free eBook offer: 
 
-        p In addition to museum exhibits, learn about distinct kinds of museums and their employment opportunities on the <a href="/resources">Resources</a> page.
-          
-        h2.page_heading SALARIES OF MUSEUM CAREERS IN THE MIDWEST
-        p When considering salaries for several museum careers, these figures only reflect averages for people working in the midwest region. For national salary ranges, check out the American Alliance of Museums (AAM) website. 
-        ul
-          li Presidents and CEO's make $88,000 on average.
-          li Vice Presidents and Assistant Directors make $97,414 on average.
-          li Archivists make $44,800 on average. 
-          li Registrars make $47,165 on average.
-          li Head Librarians make$55,839 on average.
-          li Exhibit Designers make $59,775 on average. 
-          li Chief Curators make $54,649 on average.
-          li Senior Curators make $59,902 on average.
+        p For students who are interested in a potential career in museums, direct them to our <a href="/resources">Resources</a> page. There’s a list of local institutions and links to their programs, internships, and employment pages.
+    
+    
+        
+
+        h2.page__heading SALARY RANGES FOR SOME MUSEUM CAREERS
+
+        p When considering this, these figures reflect salary ranges for people working in several different museum careers. For more information, check out the <a href="http://www.aam-us.org/"> American Alliance of Museums</a> (AAM) website
+
+        p <span class="bold">Director/CEO/President</span> - salary ranges from $59,009 to $110,500. The person in this position provides institutional leadership.
+                    
+        p <span class="bold"> Vice President and Assistant Director</span> - salary ranges from $76,800 to $97,828. The person in this position assumes responsibility for several areas of administration.
+                    
+        p <span class="bold"> Director of Information Services &amp; Technology</span> - salary ranges from $62,500 to $94,350. The person in this position oversees general administrative responsibility for information, technology and network management.
+                    
+        p <span class="bold"> Facilities Director</span> - salary ranges from $48,000 to $70,000. The person in this position handles the operation and maintenance of the institution’s buildings and facilities.
+                    
+        p <span class="bold"> Archivist</span> - salary ranges from $41,500 to $45,614. The person in this position oversees physical and intellectual archival collections.
+                    
+        p <span class="bold"> Chief Curator</span> - salary ranges from $50,000 to $62,000. The person in this position handles general administration for curatorial affairs.
+                    
+        p <span class="bold"> Senior Curator</span> - salary ranges from $51,686 to $73,201. The person in this position provides curatorial administrative duties for important collections.
+                    
+        p <span class="bold"> Registrar/Collections Manager</span> - salary ranges from $42,551 to $51,006. The person in this position handles registration of collections; development and maintenance of record systems; and administration of loan transactions, including moving, storage, arranging shipping, maintenance of insurance records.
+                    
+        p <span class="bold"> Head Librarian</span> - salary ranges from $43,532 to $64,300. The person in this position develops and carries out library practices, policies and procedures.
+                    
+        p <span class="bold"> Director of Education</span> - salary ranges from $47,118 to $57,000. The person in this position supervises the overall educational function for the museum.
+                    
+        p <span class="bold"> Exhibition Designer/Chief of Exhibitions</span> - salary ranges from $51,028 to $73,252. The person in this position plans, designs, and manages the production of exhibits.  
+
+        p -American Alliance of Museums, 2014 National Comparative Museum Salary Survey
