--- a/src/pug/htdocs/parents.pug
+++ b/src/pug/htdocs/parents.pug
@@ -18,20 +18,20 @@ block page
   .page__layer
     .page__container
       .page__content
-        p Have you ever wondered how you can help your child to prepare now for an exciting career? Have you considered whether it was important for your child to have a career that’s fulfilling? Have you yearned for your child to enjoy the work that he/she will do?  You can do that now. Find out more about different museum careers. Check out the following video!
+        p Have you ever wondered how you can help your child to prepare now for an exciting career in their future? Have you considered whether it was important for your child to have a career that’s fulfilling? Have you yearned for your child to enjoy the work that he/she will do? You can do that now. Find out more about different museum careers. Check out the following video!
         
         .responsive-video-embed
           iframe( src="https://www.youtube.com/embed/J8GUYg6pwZs" frameborder="0" allowfullscreen)
-            
-        p Explore salaries for various positions through a downloaded PDF on the Resources page. 
-
         
         h2.page__heading The Toy Exhibit, a book “by kids for kids”
 
-        p This book was created in partnership with students from the Maplewood Richmond Heights School District and the American Alliance of Museums. Elementary-aged students utilizes the curriculum of “School as Museum”, in which students are exposed to museum practices throughout the school year. Students assume various museum roles to create a quality, engaging exhibit each year. The book focuses on exhibit research, development, design and installation. 
+        p The book serves as an example of what your child can learn about the creation of a museum exhibit. In partnership with students from the Maplewood Richmond Heights School District and the American Alliance of Museums, elementary-aged students utilize the curriculum of “School as Museum”, in which students are exposed to museum practices throughout the school year. Students assume various museum roles to create a quality, engaging exhibit each year. The book focuses on exhibit research, development, design and installation.
 
         .responsive-video-embed
           iframe( src="https://www.yumpu.com/xx/embed/view/otRKJGbXn9vDiEUQ" frameborder="0" allowfullscreen="true" allowtransparency="true")
+            
+        p
+          a.page___button(href="http://www.blurb.com/b/7871161-the-toy-exhibit") Free eBook offer
 
-        p In addition to museum exhibits, learn about distinct kinds of museums and their employment opportunities on the <a href="/resources">Resources</a> page.
+        p Help your child get involved in museums. Learn more. And read about various programs and opportunities designed just for kids!
         
